# mnemos

./: .gitignore  README.md  adaptive.py  benchmark_adaptive.py  demo.py  pyproject.toml  stress_test_log.json
benchmarks/: bearing_benchmark.py  bearing_benchmark_cwru.py  bearing_benchmark_v2.py  benchmark_cifar.py  benchmark_no_specificity.py  benchmark_proto_sweep.py
docs/: MNEMOS_BRIEF.md  adaptivehead_diagram.html
examples/: benchmark_results.json  demo.html
mnemos/: LICENSE  __init__.py  adaptive.py  anomaly.py  stream.py  stress_test.py
mnemos-package(1)/mnemos/: README.md
mnemos-package(1)/mnemos/examples/: mnist_example.py
mnemos-package(1)/mnemos/mnemos/: anomaly.py
mnemos-package(3)/mnemos/mnemos/: anomaly.py  competitive.py  continual.py
mnemos.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mnemos/mnemos-package(3)/mnemos/examples/: benchmark.py
mnemos/mnemos-package(3)/mnemos/mnemos/: __init__.py  brain.py  memory.py  recognition.py
